--- a/frontend/favorites.html
+++ b/frontend/favorites.html
@@ -57,7 +57,7 @@
     const BASE_URL = "https://sesd-project-7gqa.onrender.com";
     const token = localStorage.getItem("access_token");
 
-    console.log("✅ Access Token:", token);
+    // console.log("✅ Access Token:", token);
 
     if (!token) {
       alert("Please log in first.");
